--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon-map.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>GA-LDN React Template</title>
+    <title>Travel destinations for your bucket list!</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
