--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/icon-map.png" />
+    <link rel="icon" href="%PUBLIC_URL%/icon-map.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Travel destinations for your bucket list!</title>
   </head>
