--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/icon-map.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Travel destinations for your bucket list!</title>
+    <link rel="shortcut icon" id="favicon" href="%PUBLIC_URL%/favicon.ico" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
